--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="card">
         <div class="avatar-container">
             <!-- 请替换下方的 src 为你的头像图片链接 -->
-            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=Felix" alt="头像" class="avatar">
+            <img src="me.jpg" alt="头像" class="avatar">
         </div>
         
         <h1 class="name">息羽6573</h1>
@@ -190,7 +190,7 @@
         
         <p class="bio">
             正在跟随逍遥老师探索人工智能的无限可能。<br>
-            热爱技术，专注 Prompt Engineering 与大模型应用。<br>
+            热爱技术，专注提示词工程与工作流。<br>
             日拱一卒，无限进步。
         </p>
 
