--- a/review.html
+++ b/review.html
@@ -201,11 +201,11 @@
                 <div class="dimension-grid">
                     <div class="dim-box">
                         <div class="dim-header"><div class="dim-icon">01</div> 任务画像 / Context</div>
-                        <div class="dim-content">周期：1.8 之前 | 目标：完成 AI 学习基础设施搭建。</div>
+                        <div class="dim-content">周期：12.26-12.28 | 目标：完成 AI 学习基础设施搭建。</div>
                     </div>
                     <div class="dim-box">
                         <div class="dim-header"><div class="dim-icon">02</div> 行动清单 / Action</div>
-                        <div class="dim-content">成功配置网络环境，完成 Google 与 GitHub 账号注册。</div>
+                        <div class="dim-content">  1. 电脑端/手机端科学上网成功；2. 注册了谷歌账号，登录了谷歌邮箱，gemini，youtube，X等app；3. 进行了Gemini免费会员领取的多种尝试，未成功，准备在长期失败后通过闲鱼购买“成品号”；。</div>
                     </div>
                     <div class="dim-box">
                         <div class="dim-header"><div class="dim-icon">03</div> 成果展示 / Show Time</div>
