--- a/review.html
+++ b/review.html
@@ -59,9 +59,10 @@
             left: 0;
             width: 100%;
             box-sizing: border-box;
-            padding: 25px;
+            padding: 20px 50px;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: center;
             z-index: 10;
         }
 
@@ -97,6 +98,18 @@
         .nav-menu a:hover::after {
             transform: scaleX(1);
         }
+
+        /* --- 网站 Logo 样式 --- */
+        .nav-logo {
+            font-size: 1.5rem;
+            font-weight: 800;
+            color: #312e81;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .nav-logo i { color: #6366f1; font-size: 1.4rem; }
 
         /* --- 时间轴结构 --- */
         .timeline { position: relative; padding: 20px 0; }
@@ -265,8 +278,14 @@
 <body>
 
     <nav class="navbar">
+        <!-- 左侧 Logo -->
+        <a href="index.html" class="nav-logo">
+            <i class="fas fa-rocket"></i> 息羽 AI 空间
+        </a>
+        <!-- 右侧 菜单 -->
         <div class="nav-menu">
             <a href="index.html">首页</a>
+            <a href="profile.html">个人名片</a>
             <a href="review.html">实战复盘</a>
             <a href="chat.html">AI 问答</a>
         </div>
